# scripticus

./: .dockerignore  .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  tasktree.yaml
.github/: e2e-base-images.txt
.github/workflows/: claude-code-review.yml  e2e.yml  release.yml  test.yml  validate-pipx-install.yml
client/: README.md  pyproject.toml
client/src/scripticus/: __init__.py  cli.py  config.py  credentials.py  init.py  install.py  listing.py  login.py  manifest.py  pack.py  publish.py  remote_install.py  scaffold.py  search.py  tools.py  treehash.py  uninstall.py  update.py  use.py  whoami.py  yank.py
client/tests/: conftest.py  test_cli.py  test_config.py  test_config_cmd.py  test_credentials.py  test_init.py  test_install.py  test_listing.py  test_login.py  test_multifile.py  test_new.py  test_pack.py  test_publish.py  test_remote_install.py  test_search.py  test_tools.py  test_treehash.py  test_uninstall.py  test_update.py  test_use.py  test_whoami.py  test_yank.py
common/: README.md  pyproject.toml
common/src/scripticus_common/: __init__.py  version_spec.py
common/tests/: test_treehash.py  test_version_spec.py
doc/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  VISION.md
doc/archive/: ROADMAP-v1.0.0.md
proxy/: Caddyfile
schema/: README.md  pyproject.toml
schema/src/scripticus_schema/: __init__.py  identity_glob.py  index_api.py  manifest.py  publish_api.py  resolve_api.py  semver.py  treehash.py  version_spec.py  whoami_api.py  yank_api.py
schema/tests/: test_index_api.py  test_manifest.py  test_publish_api.py  test_treehash.py  test_version_spec.py  test_yank_api.py
scripts/: dev-setup  start-server
server/: Dockerfile  README.md  pyproject.toml
server/src/scripticus_server/: __init__.py  app.py  cli.py  db.py  gitea.py  main.py  publish.py  resolve.py  yank.py
server/tests/: conftest.py  test_cli.py  test_db.py  test_e2e_gitea.py  test_health.py  test_main.py  test_publish.py  test_read_api.py  test_resolve.py  test_version.py  test_whoami.py  test_yank.py
tests/: Dockerfile.client  README.md  bootstrap.sh  commands.bats  docker-compose.build.yml  docker-compose.e2e.yml  e2e-tests.dockerfile  e2e.sh  lifecycle.bats  run.sh  update_yank.bats
tests/lib/: helpers.bash
