[project]
name = "scripticus"
version = "0.1.0"
description = "A package manager and registry for scripts — CLI client"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.16",
    "rich>=13",
]

[project.scripts]
scripticus = "scripticus.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
