[project]
name = "scripticus"
version = "0.0.0.dev0"
description = "A package manager and registry for scripts — CLI client"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.16",
    "rich>=13",
    "httpx>=0.27",
    # Same-minor bound (D29): schema and common are internal API, an older
    # client must not pick up a future release that changed either.
    "scripticus-schema>=0.1.0,<0.2.0",
    "scripticus-common>=0.1.0,<0.2.0",
]

[project.scripts]
scripticus = "scripticus.cli:app"

[tool.uv.sources]
scripticus-schema = { workspace = true }
scripticus-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
