[project]
name = "scripticus-server"
version = "0.0.0.dev0"
description = "A package manager and registry for scripts — index service"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "scripticus-schema>=0.3.0,<0.4.0",
    "scripticus-common>=0.1.0,<0.2.0",
]

[tool.uv.sources]
scripticus-schema = { workspace = true }
scripticus-common = { workspace = true }

[project.scripts]
scripticus-svr = "scripticus_server.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx2>=0.1",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"
